--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -12,3 +12,4 @@ target=android-27
 android.library.reference.1=CordovaLib
 android.library.reference.2=app
 cordova.gradle.include.1=cordova-plugin-crosswalk-webview/android-xwalk.gradle
+cordova.gradle.include.2=cordova-android-support-gradle-release/android-cordova-android-support-gradle-release.gradle
