--- a/platforms/android/app/build.gradle
+++ b/platforms/android/app/build.gradle
@@ -93,6 +93,7 @@ ext {
 // PLUGIN GRADLE EXTENSIONS START
 apply from: "../cordova-plugin-crosswalk-webview/android-xwalk.gradle"
 apply from: "../cordova-android-support-gradle-release/android-cordova-android-support-gradle-release.gradle"
+apply from: "../cordova-support-google-services/android-build.gradle"
 // PLUGIN GRADLE EXTENSIONS END
 
 def hasBuildExtras = file('build-extras.gradle').exists()
