--- a/platforms/android/project.properties
+++ b/platforms/android/project.properties
@@ -13,3 +13,4 @@ android.library.reference.1=CordovaLib
 android.library.reference.2=app
 cordova.gradle.include.1=cordova-plugin-crosswalk-webview/android-xwalk.gradle
 cordova.gradle.include.2=cordova-android-support-gradle-release/android-cordova-android-support-gradle-release.gradle
+cordova.gradle.include.3=cordova-support-google-services/android-build.gradle
